# NotationKit

./: .gitignore  CMakeLists.txt  LICENSE  Package.resolved  Package.swift  README.md
Sources/: CMakeLists.txt  NotationKit.h
Sources/AnyNotationKit/: AnyNotation.swift  AnyTypeNotation.swift
Sources/AnyNotationKitTestsSupport/: AnyNotationKitTestsSupport.m
Sources/JSONBuildKit/: ArrayComponent.swift  BuildTypes.swift  BuildTypes.swift.gyb  CodingKeyed.swift  Component.swift  Container.swift  EmptyComponent.swift  ForEach.swift  JSON+Build.swift  JSONBuildKit.swift  JSONBuiler+iOS9.swift  JSONBuiler.swift  Keyed.swift  List.swift  Map.swift  NothingComponent.swift  OptionalComponent.swift  ValueComponent.swift  WrapComponent.swift
Sources/JSONCore/: CMakeLists.txt  JSONCore.c  JSONCore.cpp  itoa.hpp
Sources/JSONKit/: AnyCodingKey.swift  Decoder.swift  JSON+Codable.swift  JSON+Decoded.swift  JSON+Decoded.swift.gyb  JSON+Keyed.swift  JSON+KeyedDecoded.swift  JSON+KeyedDecoded.swift.gyb  JSON.swift  JSONContainer.swift  JSONDecodable.swift  JSONEncodable.swift  JSONSimdDecoder.swift  JSONStorage.swift  JSONStream+Write.swift  JSONStream+Write.swift.gyb  JSONStream.swift  KeyedDecodingContainer.swift  SimdDecoder.swift  SingleValueDecodingContainer.swift  UnkeyedDecodingContainer.swift
Sources/JSONSimd/: CMakeLists.txt  JSON.cpp  JSON.hpp  JSON.mm  module.modulemap  simdjson.h
Sources/NotationCore/: Notation.swift
Sources/NotationKit/: NotationKit.swift
Tests/AnyNotationKitTests/: AnyNotationTests.swift  (+1 more)
scripts/: make_header.sh  make_swift.sh  update_gyb.sh
(+16 files in other folders)
